--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <button id="start-server">Start Server</button>
     <script>
         document.getElementById('start-server').addEventListener('click', function() {
-            fetch('https://your_api_gateway_url/start-server', { method: 'POST' })  // Replace with your actual API Gateway URL
+            fetch('https://liiz114uk9.execute-api.us-east-2.amazonaws.com/prod/start-server', { method: 'POST' })  // Replace with your actual API Gateway URL
                 .then(response => response.text())
                 .then(data => alert(data))
                 .catch(error => console.error('Error:', error));
